modified login response to fix jwt cookie related issue